--- a/trunk/limehd/res/layout/candidatepopup.xml
+++ b/trunk/limehd/res/layout/candidatepopup.xml
@@ -11,7 +11,6 @@
 	android:id="@+id/sv"
 	android:layout_width="fill_parent"
 	android:layout_height="100dp"
-	xmlns:android="http://schemas.android.com/apk/res/android"
 	>
 <!-- 	android:layout_x="0px"
 	android:layout_y="20px" 
@@ -29,9 +28,12 @@
 
 <ImageButton android:id="@+id/closeButton"
 		android:background="@android:color/transparent"
+		android:contentDescription="@string/close_cand"
 		android:src="@drawable/btn_close"
 		android:layout_width="wrap_content"
 		android:layout_height="fill_parent"
 		android:layout_marginLeft="8dp"
-		android:clickable="true" android:layout_gravity="bottom|right"/>
+		android:layout_marginStart="8dp"
+		android:clickable="true" 
+		android:layout_gravity="bottom|end"/>
 </LinearLayout>
