--- a/trunk/limehd/res/layout/candidates.xml
+++ b/trunk/limehd/res/layout/candidates.xml
@@ -51,6 +51,7 @@
             -->
         <ImageButton
             android:id="@+id/candidate_right"
+            android:contentDescription="@string/more_cand"
             android:background="@drawable/ic_suggest_scroll_background"
             android:src="@drawable/ic_suggest_expander" 
             android:layout_width="@dimen/candidate_expand_button_width"
