--- a/trunk/limehd/res/layout/inputcandidate.xml
+++ b/trunk/limehd/res/layout/inputcandidate.xml
@@ -49,6 +49,7 @@
             
             <ImageButton
                 android:id="@+id/candidate_right"
+                android:contentDescription="@string/more_cand"
                 android:layout_width="@dimen/candidate_expand_button_width"
                 android:layout_height="fill_parent"
                 android:background="@drawable/ic_suggest_scroll_background"
