--- a/trunk/limehd/res/layout/kbsetting2.xml
+++ b/trunk/limehd/res/layout/kbsetting2.xml
@@ -1,30 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:orientation="vertical">
-    <ScrollView android:id="@+id/scrollView1" android:layout_height="fill_parent" android:layout_width="fill_parent">
-        <LinearLayout android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_margin="10px" android:layout_gravity="center_vertical">
-            <TableLayout android:id="@+id/tableLayout1" android:layout_height="fill_parent" android:layout_width="fill_parent">
-                <TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:layout_width="fill_parent">
-                    <Button android:layout_width="fill_parent" android:id="@+id/btnSetupCustom" android:text="@string/l3_manage_default" android:padding="5px" android:layout_height="wrap_content" android:layout_weight="1" android:layout_margin="5px"></Button>
-                    <Button android:layout_width="fill_parent" android:id="@+id/btnSetupPhonetic" android:text="@string/l3_manage_phonetic" android:padding="5px" android:layout_height="wrap_content" android:layout_weight="1" android:layout_margin="5px"></Button>
-                </TableRow>
-                <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="fill_parent">
-	<Button android:layout_height="wrap_content" android:id="@+id/btnSetupCJ" android:text="@string/l3_manage_cj" android:padding="5px" android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"></Button>
-	<Button android:layout_height="wrap_content" android:id="@+id/btnSetupSCJ" android:text="@string/l3_manage_scj" android:padding="5px" android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"></Button>
-                
-                </TableRow>
-                <TableRow android:layout_height="fill_parent" android:id="@+id/tableRow2" android:layout_width="wrap_content">
-                    <Button android:id="@+id/btnSetupDayi" android:text="@string/l3_manage_dayi" android:padding="5px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:layout_margin="5px"></Button>
-                    <Button android:id="@+id/btnSetupEz" android:text="@string/l3_manage_eazy" android:padding="5px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:layout_margin="5px"></Button>
-                </TableRow>
-                <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
-                    <Button android:layout_width="fill_parent" android:id="@+id/btnSetupArray" android:text="@string/l3_manage_array" android:padding="5px" android:layout_height="wrap_content" android:layout_weight="1" android:layout_margin="5px"></Button>
-                    <Button android:layout_width="fill_parent" android:id="@+id/btnSetupArray10" android:text="@string/l3_manage_array10" android:padding="5px" android:layout_height="wrap_content" android:layout_weight="1" android:layout_margin="5px"></Button>
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
+
+    
+        
+        <TableLayout
+            android:id="@+id/tableLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
+
+            <TableRow
+                android:id="@+id/tableRow3"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <Button
+                    android:id="@+id/btnSetupCustom"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:text="@string/l3_manage_default" />
+
+                <Button
+                    android:id="@+id/btnSetupPhonetic"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:text="@string/l3_manage_phonetic" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <Button
+                    android:id="@+id/btnSetupCJ"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:text="@string/l3_manage_cj" />
+
+                <Button
+                    android:id="@+id/btnSetupSCJ"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:text="@string/l3_manage_scj" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow2"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent" >
+
+                <Button
+                    android:id="@+id/btnSetupDayi"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:text="@string/l3_manage_dayi" />
+
+                <Button
+                    android:id="@+id/btnSetupEz"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:text="@string/l3_manage_eazy" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <Button
+                    android:id="@+id/btnSetupArray"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:text="@string/l3_manage_array" />
+
+                <Button
+                    android:id="@+id/btnSetupArray10"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:text="@string/l3_manage_array10" />
+            </TableRow>
+        </TableLayout>
     </ScrollView>
-</LinearLayout>
+
+
 
