--- a/trunk/limehd/res/layout/progress.xml
+++ b/trunk/limehd/res/layout/progress.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -65,13 +65,16 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
-        <com.google.ads.AdView
+        <com.google.android.gms.ads.doubleclick.PublisherAdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             ads:adSize="BANNER"
-            ads:adUnitId="a150d26a4156cea"
-            ads:loadAdOnCreate="true"/>
+            ads:adUnitId="a150d26a4156cea"/>
+        
+      
+      
     </LinearLayout>
     
 </LinearLayout>
