--- a/LimeStudio/app/src/main/res/layout/fragment_manage_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_manage_im.xml
@@ -60,12 +60,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <CheckBox
+                <ToggleButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/chkManageIm"
-                    android:layout_column="0"
-                    android:checked="false" />
+                    android:id="@+id/toggleManageIm"
+                    android:layout_column="1"
+                    android:checked="false"
+                    android:textOff="@string/manage_im_root"
+                    android:textOn="@string/manage_im_root" />
 
                 <EditText
                     android:layout_width="0dp"
@@ -113,45 +115,33 @@
             android:layout_height="50dp">
 
             <Button
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/manage_im_previous"
                 android:id="@+id/btnManageImPrevious"
-                android:layout_weight="1"
-                android:layout_margin="2dp" />
+                android:layout_margin="2dp"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp" />
 
 
-            <Button
+            <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/manage_im_copy"
-                android:id="@+id/btnManageImCopy"
-                android:layout_weight="1"
-                android:layout_margin="2dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/txtNavigationInfo"
+                android:textSize="8pt"
+                android:gravity="center_horizontal"
+                android:layout_weight="1" />
 
             <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/manage_im_remove"
-                android:id="@+id/btnManageImDelete"
-                android:layout_weight="1"
-                android:layout_margin="2dp" />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/manage_im_move"
-                android:id="@+id/btnManageImMove"
-                android:layout_weight="1"
-                android:layout_margin="2dp" />
-
-            <Button
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/manage_im_next"
                 android:id="@+id/btnManageImNext"
-                android:layout_weight="1"
-                android:layout_margin="2dp" />
+                android:layout_margin="2dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
         </LinearLayout>
 
