--- a/LimeStudio/app/src/main/res/values/dimens.xml
+++ b/LimeStudio/app/src/main/res/values/dimens.xml
@@ -38,7 +38,7 @@
     <dimen name="candidate_vertical_padding">10sp</dimen>
     <dimen name="candidate_vertical_extras_padding">0sp</dimen>
     <dimen name="candidate_number_font_size">14sp</dimen>
-    <dimen name="candidate_expand_button_width">42sp</dimen>
+    <dimen name="candidate_expand_button_width">64dp</dimen>
     <dimen name="candidate_font_size">28sp</dimen>
     <dimen name="keyboard_bottom_padding">0.06in</dimen>
     <dimen name="key_text_size">21dp</dimen>
